--- a/KrasnovaEV-KT-42-20/appsettings.Development.json
+++ b/KrasnovaEV-KT-42-20/appsettings.Development.json
@@ -1,8 +1,31 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "Microsoft.AspNetCore": "Warning"
+  //  }
+  //},
+
+  "NLog": {
+    "internalLogLevel": "Info",
+    "internalLogFile": "C:\\Users\\Evgeniya\\source\\repos\\logs\\internal-nlog.txt",
+    "extensions": [
+      { "assembly": "NLog.Extensions.Logging" },
+      { "assembly": "NLog.Web.AspNetCore" }
+    ],
+    "targets": {
+      "my-file": {
+        "type": "File",
+        "fileName": "C:\\Users\\Evgeniya\\source\\repos\\logs\\logfile-${shortdate}.log",
+        "layout": "${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}"
+      }
+    },
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Error",
+        "writeTo": "my-file"
+      }
+    ]
   }
 }
