Feat: add dbcontext and CreateDatabase migration

--- a/KrasnovaEV-KT-42-20/appsettings.Development.json
+++ b/KrasnovaEV-KT-42-20/appsettings.Development.json
@@ -27,5 +27,9 @@
         "writeTo": "my-file"
       }
     ]
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres; Password = 0902; Host=localhost; Port=5432; Database = Student;"
   }
 }
