--- a/KrasnovaEV-KT-42-20/appsettings.Development.json
+++ b/KrasnovaEV-KT-42-20/appsettings.Development.json
@@ -30,6 +30,6 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres; Password = 0902; Host=localhost; Port=5432; Database = Student;"
+    "DefaultConnection": "User ID=postgres; Password = postgres; Host=localhost; Port=5432; Database = Student;"
   }
 }
